--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
       <div class="header__logo"></div>
       <div class="header__line"></div>
     </header>
+    <main class="content">
+      <section class="profile">
+        <div class="profile__avatar"></div>
+        <div class="profile__info">
+          <button class="profile__button">
+            <img class="profile__edit-button" src="./images/Edit-Button.png" alt="изображение кнопки">
+          </button>
+        </div>
+
+      </section>
+
+    </main>
 
 
   </div>
