версия для разрешений 1280

--- a/index.html
+++ b/index.html
@@ -14,16 +14,74 @@
     </header>
     <main class="content">
       <section class="profile">
-        <div class="profile__avatar"></div>
+        <img class="profile__avatar" src="./images/logo-profile.jpg"></img>
         <div class="profile__info">
-          <button class="profile__button">
-            <img class="profile__edit-button" src="./images/Edit-Button.png" alt="изображение кнопки">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <p class="profile__subtitle">Исследователь океана</p>
+          <button class="edit-button">
+            <img class="edit-button__image" src="./images/edit-button.png">
+            <div class="edit-button__rectangle"></div>
           </button>
         </div>
-
+        <button class="add-button">
+          <img src="./images/Vector.png" alt="изображение кнопки">
+          <div class="add-button__rectangle"></div>
+        </button>
       </section>
-
+      <section class="elements">
+        <div class="element">
+          <img class="element__image" src="./images/karachayevsk.png" alt="карачаевск"></img>
+          <div class="element__text">
+          <h2 class="element__title">Карачаевск</h2>
+          <div class="element__vector"></div>
+          </div>
+          <div class="element__rectangle"></div>
+        </div>
+        <div class="element">
+          <img class="element__image" src="./images/elbrus.png" alt="гора эльбрус"></img>
+          <div class="element__text">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <div class="element__vector"></div>
+          </div>
+          <div class="element__rectangle"></div>
+        </div>
+        <div class="element">
+          <img class="element__image" src="./images/dombai.png" alt="домбай"></img>
+          <div class="element__text">
+          <h2 class="element__title">Домбай</h2>
+          <div class="element__vector"></div>
+          </div>
+          <div class="element__rectangle"></div>
+        </div>
+        <div class="element">
+          <img class="element__image" src="./images/partizansk.jpg" alt="партизанск"></img>
+          <div class="element__text">
+          <h2 class="element__title">Партизанск</h2>
+          <div class="element__vector"></div>
+          </div>
+          <div class="element__rectangle"></div>
+        </div>
+        <div class="element">
+          <img class="element__image" src="./images/severodvinsk.jpg" alt="северодвинск"></img>
+          <div class="element__text">
+          <h2 class="element__title">Северодвинск</h2>
+          <div class="element__vector"></div>
+          </div>
+          <div class="element__rectangle"></div>
+        </div>
+        <div class="element">
+          <img class="element__image" src="./images/tver.jpg" alt="тверь"></img>
+          <div class="element__text">
+          <h2 class="element__title">Тверь</h2>
+          <div class="element__vector"></div>
+          </div>
+          <div class="element__rectangle"></div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+    </footer>
 
 
   </div>
