--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="popup">
       <div class="popup__container">
         <button class="popup__close-button">
-        <img class="popup__image" src="./images/Close-Icon.png" alt="крестик"></img>
+        <img class="popup__image" src="./images/Close-Icon.png" alt="крестик">
         </button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <div class="popup__inputs">
@@ -33,11 +33,11 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/logo-profile.jpg" alt="изображение"></img>
+        <img class="profile__avatar" src="./images/logo-profile.jpg" alt="изображение">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="edit-button">
-            <img class="edit-button__image" src="./images/edit-button.png" alt="карандаш"></img>
+            <img class="edit-button__image" src="./images/Edit-Button.png" alt="карандаш">
             <div class="edit-button__rectangle"></div>
           </button>
           <p class="profile__subtitle">Исследователь океана</p>
@@ -49,7 +49,7 @@
       </section>
       <section class="elements">
         <div class="element">
-          <img class="element__image" src="./images/karachayevsk.png" alt="карачаевск"></img>
+          <img class="element__image" src="./images/karachayevsk.png" alt="карачаевск">
           <div class="element__text">
           <h2 class="element__title">Карачаевск</h2>
           <div class="element__vector"></div>
@@ -57,7 +57,7 @@
           <div class="element__rectangle"></div>
         </div>
         <div class="element">
-          <img class="element__image" src="./images/elbrus.png" alt="гора эльбрус"></img>
+          <img class="element__image" src="./images/elbrus.png" alt="гора эльбрус">
           <div class="element__text">
           <h2 class="element__title">Гора Эльбрус</h2>
           <div class="element__vector"></div>
@@ -65,7 +65,7 @@
           <div class="element__rectangle"></div>
         </div>
         <div class="element">
-          <img class="element__image" src="./images/dombai.png" alt="домбай"></img>
+          <img class="element__image" src="./images/dombai.png" alt="домбай">
           <div class="element__text">
           <h2 class="element__title">Домбай</h2>
           <div class="element__vector"></div>
@@ -73,7 +73,7 @@
           <div class="element__rectangle"></div>
         </div>
         <div class="element">
-          <img class="element__image" src="./images/partizansk.jpg" alt="партизанск"></img>
+          <img class="element__image" src="./images/partizansk.jpg" alt="партизанск">
           <div class="element__text">
           <h2 class="element__title">Партизанск</h2>
           <div class="element__vector"></div>
@@ -81,7 +81,7 @@
           <div class="element__rectangle"></div>
         </div>
         <div class="element">
-          <img class="element__image" src="./images/severodvinsk.jpg" alt="северодвинск"></img>
+          <img class="element__image" src="./images/severodvinsk.jpg" alt="северодвинск">
           <div class="element__text">
           <h2 class="element__title">Северодвинск</h2>
           <div class="element__vector"></div>
@@ -89,7 +89,7 @@
           <div class="element__rectangle"></div>
         </div>
         <div class="element">
-          <img class="element__image" src="./images/tver.jpg" alt="тверь"></img>
+          <img class="element__image" src="./images/tver.jpg" alt="тверь">
           <div class="element__text">
           <h2 class="element__title">Тверь</h2>
           <div class="element__vector"></div>
