--- a/index.html
+++ b/index.html
@@ -6,45 +6,29 @@
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
+<!--Доброго времени суток! 
+  Прошу прощения, что оставляю комментарий здесь. 
+  Вы написали, что на разрешении 336px появляется горизонтальный скролл. 
+  У себя к сожалению этого не вижу (ваш скрин посмотрел).
+  Скролл начинает появляться только на разрешениях ниже 320px, так как стоит ограничение по ширене экрана.
+  Посмотрите еще раз пожалуйста. Спасибо вам за вашу работу! -->
 <body>
   <div class="page">
-    <div class="popup">
-      <div class="popup__container">
-        <button class="popup__close-button">
-        <img class="popup__image" src="./images/Close-Icon.png" alt="крестик">
-        </button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <div class="popup__inputs">
-        <input class="popup__name" type="text" value="Жак-Ив Кусто">
-        <div class="popup__line"></div>
-        <input class="popup__text" type="text" value="Исследователь океана">
-        <div class="popup__line"></div>
-        </div>
-        <button type="submit" class="popup__button">
-          <p class="popup__button-text">Сохранить</p>
-          <div class="popup__button-rectangle"></div>
-        </button>
-        <div class="popup__rectangle"></div>
-      </div>
-    </div>
     <header class="header">
       <div class="header__logo"></div>
-      <div class="header__line"></div>
     </header>
     <main class="content">
       <section class="profile">
         <img class="profile__avatar" src="./images/logo-profile.jpg" alt="изображение">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button class="edit-button">
-            <img class="edit-button__image" src="./images/Edit-Button.png" alt="карандаш">
-            <div class="edit-button__rectangle"></div>
+          <button type="submit" class="profile__edit-button">
+            <div class="profile__edit-image"></div>
           </button>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="add-button">
-          <img src="./images/Vector.png" alt="изображение кнопки">
-          <div class="add-button__rectangle"></div>
+        <button type="submit" class="profile__add-button">
+          <div class="profile__add-image"></div>
         </button>
       </section>
       <section class="elements">
@@ -52,51 +36,70 @@
           <img class="element__image" src="./images/karachayevsk.png" alt="карачаевск">
           <div class="element__text">
           <h2 class="element__title">Карачаевск</h2>
-          <div class="element__vector"></div>
+          <button type="submit" class="element__like">
+            <div class="element__vector"></div>
+          </button>
           </div>
-          <div class="element__rectangle"></div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/elbrus.png" alt="гора эльбрус">
           <div class="element__text">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <div class="element__vector"></div>
+          <button type="submit" class="element__like">
+            <div class="element__vector"></div>
+          </button>
           </div>
-          <div class="element__rectangle"></div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/dombai.png" alt="домбай">
           <div class="element__text">
           <h2 class="element__title">Домбай</h2>
-          <div class="element__vector"></div>
+          <button type="submit" class="element__like">
+            <div class="element__vector"></div>
+          </button>
           </div>
-          <div class="element__rectangle"></div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/partizansk.jpg" alt="партизанск">
           <div class="element__text">
           <h2 class="element__title">Партизанск</h2>
-          <div class="element__vector"></div>
+          <button type="submit" class="element__like">
+            <div class="element__vector"></div>
+          </button>
           </div>
-          <div class="element__rectangle"></div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/severodvinsk.jpg" alt="северодвинск">
           <div class="element__text">
           <h2 class="element__title">Северодвинск</h2>
-          <div class="element__vector"></div>
+          <button type="submit" class="element__like">
+            <div class="element__vector"></div>
+          </button>
           </div>
-          <div class="element__rectangle"></div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/tver.jpg" alt="тверь">
           <div class="element__text">
           <h2 class="element__title">Тверь</h2>
-          <div class="element__vector"></div>
+          <button type="submit" class="element__like">
+            <div class="element__vector"></div>
+          </button>
           </div>
-          <div class="element__rectangle"></div>
         </div>
       </section>
+      <div class="popup">
+        <form target="" action="" class="popup__container">
+          <button type="submit" class="popup__close-button">
+          <div class="popup__image"></div>
+          </button>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <div class="popup__inputs">
+          <input class="popup__input popup__input_name" type="text" value="Жак-Ив Кусто">
+          <input class="popup__input popup__input_text" type="text" value="Исследователь океана">
+          </div>
+          <button type="submit" class="popup__button">Сохранить</button>
+        </form>
+      </div>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
