внесение финальных правок

--- a/index.html
+++ b/index.html
@@ -22,81 +22,63 @@
         <img class="profile__avatar" src="./images/logo-profile.jpg" alt="изображение">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button type="submit" class="profile__edit-button">
-            <div class="profile__edit-image"></div>
-          </button>
+          <button type="submit" class="profile__edit-button"></button>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button type="submit" class="profile__add-button">
-          <div class="profile__add-image"></div>
-        </button>
+        <button type="submit" class="profile__add-button"></button>
       </section>
       <section class="elements">
         <div class="element">
           <img class="element__image" src="./images/karachayevsk.png" alt="карачаевск">
           <div class="element__text">
           <h2 class="element__title">Карачаевск</h2>
-          <button type="submit" class="element__like">
-            <div class="element__vector"></div>
-          </button>
+          <button type="submit" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/elbrus.png" alt="гора эльбрус">
           <div class="element__text">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="submit" class="element__like">
-            <div class="element__vector"></div>
-          </button>
+          <button type="submit" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/dombai.png" alt="домбай">
           <div class="element__text">
           <h2 class="element__title">Домбай</h2>
-          <button type="submit" class="element__like">
-            <div class="element__vector"></div>
-          </button>
+          <button type="submit" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/partizansk.jpg" alt="партизанск">
           <div class="element__text">
           <h2 class="element__title">Партизанск</h2>
-          <button type="submit" class="element__like">
-            <div class="element__vector"></div>
-          </button>
+          <button type="submit" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/severodvinsk.jpg" alt="северодвинск">
           <div class="element__text">
           <h2 class="element__title">Северодвинск</h2>
-          <button type="submit" class="element__like">
-            <div class="element__vector"></div>
-          </button>
+          <button type="submit" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/tver.jpg" alt="тверь">
           <div class="element__text">
           <h2 class="element__title">Тверь</h2>
-          <button type="submit" class="element__like">
-            <div class="element__vector"></div>
-          </button>
+          <button type="submit" class="element__like"></button>
           </div>
         </div>
       </section>
       <div class="popup">
-        <form target="" action="" class="popup__container">
-          <button type="submit" class="popup__close-button">
-          <div class="popup__image"></div>
-          </button>
+        <form class="popup__container">
+          <button type="submit" class="popup__close-button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <div class="popup__inputs">
-          <input class="popup__input popup__input_name" type="text" value="Жак-Ив Кусто">
-          <input class="popup__input popup__input_text" type="text" value="Исследователь океана">
-          </div>
+          <fieldset class="popup__inputs">
+          <input class="popup__input popup__input_name" type="text" value="">
+          <input class="popup__input popup__input_text" type="text" value="">
+          </fieldset>
           <button type="submit" class="popup__button">Сохранить</button>
         </form>
       </div>
