--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
-<!--Доброго времени суток! 
-  Прошу прощения, что оставляю комментарий здесь. 
-  Вы написали, что на разрешении 336px появляется горизонтальный скролл. 
-  У себя к сожалению этого не вижу (ваш скрин посмотрел).
-  Скролл начинает появляться только на разрешениях ниже 320px, так как стоит ограничение по ширене экрана.
-  Посмотрите еще раз пожалуйста. Спасибо вам за вашу работу! -->
 <body>
   <div class="page">
     <header class="header">
@@ -22,58 +16,58 @@
         <img class="profile__avatar" src="./images/logo-profile.jpg" alt="изображение">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button type="submit" class="profile__edit-button"></button>
+          <button type="button" class="profile__edit-button"></button>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button type="submit" class="profile__add-button"></button>
+        <button type="button" class="profile__add-button"></button>
       </section>
       <section class="elements">
         <div class="element">
           <img class="element__image" src="./images/karachayevsk.png" alt="карачаевск">
           <div class="element__text">
           <h2 class="element__title">Карачаевск</h2>
-          <button type="submit" class="element__like"></button>
+          <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/elbrus.png" alt="гора эльбрус">
           <div class="element__text">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="submit" class="element__like"></button>
+          <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/dombai.png" alt="домбай">
           <div class="element__text">
           <h2 class="element__title">Домбай</h2>
-          <button type="submit" class="element__like"></button>
+          <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/partizansk.jpg" alt="партизанск">
           <div class="element__text">
           <h2 class="element__title">Партизанск</h2>
-          <button type="submit" class="element__like"></button>
+          <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/severodvinsk.jpg" alt="северодвинск">
           <div class="element__text">
           <h2 class="element__title">Северодвинск</h2>
-          <button type="submit" class="element__like"></button>
+          <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__image" src="./images/tver.jpg" alt="тверь">
           <div class="element__text">
           <h2 class="element__title">Тверь</h2>
-          <button type="submit" class="element__like"></button>
+          <button type="button" class="element__like"></button>
           </div>
         </div>
       </section>
       <div class="popup">
         <form class="popup__container">
-          <button type="submit" class="popup__close-button"></button>
+          <button type="button" class="popup__close-button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__inputs">
           <input class="popup__input popup__input_name" type="text" value="">
