--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </section>
       <div class="popup">
-        <form class="popup__container">
+        <form name="popup__container" method="GET" action="#" class="popup__container">
           <button type="button" class="popup__close-button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__inputs">
