разработка нового интерфейса

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
           </fieldset>
           <button type="submit" class="popup__button">Сохранить</button>
         </form>
+        <div class="popup">
+          <form name="popup__card" method="GET" action="#" class="popup__container">
+            
+          </form>
+        </div>
       </div>
     </main>
     <footer class="footer">
