--- a/index.html
+++ b/index.html
@@ -22,48 +22,15 @@
         <button type="button" class="profile__add-button"></button>
       </section>
       <section class="elements">
-        <div class="element">
-          <img class="element__image" src="./images/karachayevsk.png" alt="карачаевск">
-          <div class="element__text">
-          <h2 class="element__title">Карачаевск</h2>
-          <button type="button" class="element__like"></button>
+        <template id="element-template">
+          <div class="element">
+            <img class="element__image" src="" alt="изображение">
+            <div class="element__text">
+              <h2 class="element__title"></h2>
+              <button type="button" class="element__like"></button>
+            </div>
           </div>
-        </div>
-        <div class="element">
-          <img class="element__image" src="./images/elbrus.png" alt="гора эльбрус">
-          <div class="element__text">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img class="element__image" src="./images/dombai.png" alt="домбай">
-          <div class="element__text">
-          <h2 class="element__title">Домбай</h2>
-          <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img class="element__image" src="./images/partizansk.jpg" alt="партизанск">
-          <div class="element__text">
-          <h2 class="element__title">Партизанск</h2>
-          <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img class="element__image" src="./images/severodvinsk.jpg" alt="северодвинск">
-          <div class="element__text">
-          <h2 class="element__title">Северодвинск</h2>
-          <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img class="element__image" src="./images/tver.jpg" alt="тверь">
-          <div class="element__text">
-          <h2 class="element__title">Тверь</h2>
-          <button type="button" class="element__like"></button>
-          </div>
-        </div>
+        </template>
       </section>
       <div class="popup">
         <form name="popup__container" method="GET" action="#" class="popup__container">
@@ -75,11 +42,17 @@
           </fieldset>
           <button type="submit" class="popup__button">Сохранить</button>
         </form>
-        <div class="popup">
-          <form name="popup__card" method="GET" action="#" class="popup__container">
-            
-          </form>
-        </div>
+      </div>
+      <div class="popup-card">
+        <form name="form__card" method="GET" action="#" class="popup__container">
+          <button type="button" class="popup__close-button"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <fieldset class="popup__inputs">
+            <input class="popup__input popup__input_title" type="text" value="Название">
+            <input class="popup__input popup__input_link" type="text" value="Ссылка на картинку">
+          </fieldset>
+          <button type="submit" class="popup__button">Создать</button>
+        </form>
       </div>
     </main>
     <footer class="footer">
