--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
           <button type="submit" class="popup__button">Сохранить</button>
         </form>
       </div>
-      <div class="popup-card">
-        <form name="form__card" method="GET" action="#" class="popup__container">
-          <button type="button" class="popup__close-button"></button>
+      <div class="popup popup__card">
+        <form name="form__card" method="GET" action="#" class="popup__container form__card">
+          <button type="button" class="popup__close-button popup__close-button_card"></button>
           <h2 class="popup__title">Новое место</h2>
           <fieldset class="popup__inputs">
-            <input class="popup__input popup__input_title" type="text" value="Название">
-            <input class="popup__input popup__input_link" type="text" value="Ссылка на картинку">
+            <input class="popup__input popup__input_title" type="text" placeholder="Название" value="">
+            <input class="popup__input popup__input_link" type="text" placeholder="Ссылка на картинку" value="">
           </fieldset>
           <button type="submit" class="popup__button">Создать</button>
         </form>
