--- a/index.html
+++ b/index.html
@@ -22,15 +22,6 @@
         <button type="button" class="profile__add-button"></button>
       </section>
       <section class="elements">
-        <template id="element-template">
-          <div class="element">
-            <img class="element__image" src="" alt="изображение">
-            <div class="element__text">
-              <h2 class="element__title"></h2>
-              <button type="button" class="element__like"></button>
-            </div>
-          </div>
-        </template>
       </section>
       <div class="popup">
         <form name="popup__container" method="GET" action="#" class="popup__container">
@@ -44,7 +35,7 @@
         </form>
       </div>
       <div class="popup popup__card">
-        <form name="form__card" method="GET" action="#" class="popup__container form__card">
+        <form name="form__card" method="GET" action="#" class="popup__container popup__container_card">
           <button type="button" class="popup__close-button popup__close-button_card"></button>
           <h2 class="popup__title">Новое место</h2>
           <fieldset class="popup__inputs">
@@ -54,11 +45,28 @@
           <button type="submit" class="popup__button">Создать</button>
         </form>
       </div>
+      <div class="popup-photo">
+        <div class="popup-photo__card">
+          <button type="button" class="popup-photo__close-button"></button>
+          <img class="popup-photo__image" src="" alt="изображение">
+          <p class="popup-photo__name"></p>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
+  <template id="element-template">
+    <div class="element">
+      <button class="element__delete" type="button"></button>
+      <img class="element__image" src="" alt="изображение">
+      <div class="element__text">
+        <h2 class="element__title"></h2>
+        <button type="button" class="element__like"></button>
+      </div>
+    </div>
+  </template>
   <script src="./javascript/javascript.js"></script>
 </body>
 </html>
