--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </section>
       <section class="elements">
       </section>
-      <div class="popup">
+      <section class="popup-modal">
+      <div class="popup popup_type_profile">
         <form name="popup__container" method="GET" action="#" class="popup__container">
           <button type="button" class="popup__close-button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
@@ -34,7 +35,7 @@
           <button type="submit" class="popup__button">Сохранить</button>
         </form>
       </div>
-      <div class="popup popup__card">
+      <div class="popup popup_type_card">
         <form name="form__card" method="GET" action="#" class="popup__container popup__container_card">
           <button type="button" class="popup__close-button popup__close-button_card"></button>
           <h2 class="popup__title">Новое место</h2>
@@ -45,13 +46,14 @@
           <button type="submit" class="popup__button">Создать</button>
         </form>
       </div>
-      <div class="popup-photo">
-        <div class="popup-photo__card">
-          <button type="button" class="popup-photo__close-button"></button>
-          <img class="popup-photo__image" src="" alt="изображение">
-          <p class="popup-photo__name"></p>
+      <div class="popup popup_type_photo">
+        <div class="popup__card">
+          <button type="button" class="popup__close-button popup__close-button_photo"></button>
+          <img class="popup__card-image" src="" alt="изображение">
+          <p class="popup__card-name"></p>
         </div>
       </div>
+      </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
