--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </section>
       <section class="elements">
       </section>
-      <section class="popup-modal">
+      <section class="popups">
       <div class="popup popup_type_profile">
         <form name="popup__container" method="GET" action="#" class="popup__container">
           <button type="button" class="popup__close-button"></button>
