--- a/index.html
+++ b/index.html
@@ -24,24 +24,28 @@
       <section class="elements">
       </section>
       <section class="popups">
-      <div class="popup popup_type_profile">
-        <form name="popup__container" method="GET" action="#" class="popup__container">
+      <div class="popup popup_type_profile"> 
+        <form name="popup__container" method="GET" action="#" class="popup__container" novalidate>
           <button type="button" class="popup__close-button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__inputs">
-          <input class="popup__input popup__input_name" type="text" value="">
-          <input class="popup__input popup__input_text" type="text" value="">
+          <input class="popup__input popup__input_name" id="name-input" type="text" value="" required minlength="2" maxlength="40" pattern="[A-Za-zА-ЯЁа-яё -]{1,}">
+          <span class="popup__error-message" id="name-input-error"></span>
+          <input class="popup__input popup__input_text" id="text-input" type="text" value="" required minlength="2" maxlength="200">
+          <span class="popup__error-message" id="text-input-error"></span>
           </fieldset>
           <button type="submit" class="popup__button">Сохранить</button>
         </form>
       </div>
       <div class="popup popup_type_card">
-        <form name="form__card" method="GET" action="#" class="popup__container popup__container_card">
+        <form name="form__card" method="GET" action="#" class="popup__container popup__container_card" novalidate>
           <button type="button" class="popup__close-button popup__close-button_card"></button>
           <h2 class="popup__title">Новое место</h2>
           <fieldset class="popup__inputs">
-            <input class="popup__input popup__input_title" type="text" placeholder="Название" value="">
-            <input class="popup__input popup__input_link" type="text" placeholder="Ссылка на картинку" value="">
+            <input class="popup__input popup__input_title" id="title-input" type="text" placeholder="Название" value="" required minlength="1" maxlength="30">
+            <span class="popup__error-message" id="title-input-error"></span>
+            <input class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="">
+            <span class="popup__error-message" id="link-input-error"></span>
           </fieldset>
           <button type="submit" class="popup__button">Создать</button>
         </form>
@@ -70,5 +74,6 @@
     </div>
   </template>
   <script src="./javascript/javascript.js"></script>
+  <script src="./javascript/validate.js"></script>
 </body>
 </html>
