--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <fieldset class="popup__inputs">
             <input class="popup__input popup__input_title" id="title-input" type="text" placeholder="Название" value="" required minlength="1" maxlength="30">
             <span class="popup__error-message" id="title-input-error"></span>
-            <input class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="">
+            <input class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="" required>
             <span class="popup__error-message" id="link-input-error"></span>
           </fieldset>
           <button type="submit" class="popup__button">Создать</button>
@@ -53,7 +53,7 @@
       <div class="popup popup_type_photo">
         <div class="popup__card">
           <button type="button" class="popup__close-button popup__close-button_photo"></button>
-          <img class="popup__card-image" src="" alt="изображение">
+          <img class="popup__card-image" src="" alt="">
           <p class="popup__card-name"></p>
         </div>
       </div>
@@ -73,7 +73,8 @@
       </div>
     </div>
   </template>
-  <script src="./javascript/javascript.js"></script>
+  <script src="./javascript/initialCards.js"></script>
+  <script src="./javascript/index.js"></script>
   <script src="./javascript/validate.js"></script>
 </body>
 </html>
