--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
       <section class="popups">
       <div class="popup popup_type_profile"> 
-        <form name="popup__container" method="GET" action="#" class="popup__container" novalidate>
+        <form name="popup__container" method="GET" action="#" class="popup__container popup__container_profile" novalidate>
           <button type="button" class="popup__close-button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__inputs">
@@ -47,7 +47,7 @@
             <input class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="" required>
             <span class="popup__error-message" id="link-input-error"></span>
           </fieldset>
-          <button type="submit" class="popup__button">Создать</button>
+          <button type="submit" class="popup__button popup__button_card">Создать</button>
         </form>
       </div>
       <div class="popup popup_type_photo">
@@ -73,8 +73,7 @@
       </div>
     </div>
   </template>
-  <script src="./javascript/initialCards.js"></script>
-  <script src="./javascript/validate.js"></script>
-  <script src="./javascript/index.js"></script>
+<!--  <script src="./javascript/validate.js"></script> -->
+  <script type="module" src="./javascript/index.js"></script>
 </body>
 </html>
