--- a/index.html
+++ b/index.html
@@ -23,47 +23,11 @@
       </section>
       <section class="elements">
       </section>
-      <section class="popups">
-      <div class="popup popup_type_profile"> 
-        <form name="popup__container" method="GET" action="#" class="popup__container popup__container_profile" novalidate>
-          <button type="button" class="popup__close-button"></button>
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <fieldset class="popup__inputs">
-          <input class="popup__input popup__input_name" id="name-input" type="text" value="" required minlength="2" maxlength="40" pattern="[A-Za-zА-ЯЁа-яё -]{1,}">
-          <span class="popup__error-message" id="name-input-error"></span>
-          <input class="popup__input popup__input_text" id="text-input" type="text" value="" required minlength="2" maxlength="200">
-          <span class="popup__error-message" id="text-input-error"></span>
-          </fieldset>
-          <button type="submit" class="popup__button">Сохранить</button>
-        </form>
-      </div>
-      <div class="popup popup_type_card">
-        <form name="form__card" method="GET" action="#" class="popup__container popup__container_card" novalidate>
-          <button type="button" class="popup__close-button popup__close-button_card"></button>
-          <h2 class="popup__title">Новое место</h2>
-          <fieldset class="popup__inputs">
-            <input class="popup__input popup__input_title" id="title-input" type="text" placeholder="Название" value="" required minlength="1" maxlength="30">
-            <span class="popup__error-message" id="title-input-error"></span>
-            <input class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="" required>
-            <span class="popup__error-message" id="link-input-error"></span>
-          </fieldset>
-          <button type="submit" class="popup__button popup__button_card">Создать</button>
-        </form>
-      </div>
-      <div class="popup popup_type_photo">
-        <div class="popup__card">
-          <button type="button" class="popup__close-button popup__close-button_photo"></button>
-          <img class="popup__card-image" src="" alt="">
-          <p class="popup__card-name"></p>
-        </div>
-      </div>
-      </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
-  </div>
-  <template id="element-template">
+    <template id="element-template">
     <div class="element">
       <button class="element__delete" type="button"></button>
       <img class="element__image" src="" alt="изображение">
@@ -73,6 +37,42 @@
       </div>
     </div>
   </template>
+  <section class="popups">
+    <div class="popup popup_type_profile"> 
+      <form name="popup__container" method="GET" action="#" class="popup__container popup__container_profile" novalidate>
+        <button type="button" class="popup__close-button popup__close-button_profile"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <fieldset class="popup__inputs">
+        <input name="popup__input_name" class="popup__input popup__input_name" id="name-input" type="text" value="" required minlength="2" maxlength="40" pattern="[A-Za-zА-ЯЁа-яё -]{1,}">
+        <span class="popup__error-message" id="name-input-error"></span>
+        <input name="popup__input_text" class="popup__input popup__input_text" id="text-input" type="text" value="" required minlength="2" maxlength="200">
+        <span class="popup__error-message" id="text-input-error"></span>
+        </fieldset>
+        <button type="submit" class="popup__button">Сохранить</button>
+      </form>
+    </div>
+    <div class="popup popup_type_card">
+      <form name="form__card" method="GET" action="#" class="popup__container popup__container_card" novalidate>
+        <button type="button" class="popup__close-button popup__close-button_card"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <fieldset class="popup__inputs">
+          <input name="popup__input_title" class="popup__input popup__input_title" id="title-input" type="text" placeholder="Название" value="" required minlength="1" maxlength="30">
+          <span class="popup__error-message" id="title-input-error"></span>
+          <input name="popup__input_link" class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="" required>
+          <span class="popup__error-message" id="link-input-error"></span>
+        </fieldset>
+        <button type="submit" class="popup__button popup__button_card">Создать</button>
+      </form>
+    </div>
+    <div class="popup popup_type_photo">
+      <div class="popup__card">
+        <button type="button" class="popup__close-button popup__close-button_photo"></button>
+        <img class="popup__card-image" src="" alt="">
+        <p class="popup__card-name"></p>
+      </div>
+    </div>
+    </section>
+  </div>
   <script type="module" src="./javascript/index.js"></script>
 </body>
 </html>
