рефакторинг кода под ООП

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <button type="button" class="popup__close-button popup__close-button_profile"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <fieldset class="popup__inputs">
-        <input name="popup__input_name" class="popup__input popup__input_name" id="name-input" type="text" value="" required minlength="2" maxlength="40" pattern="[A-Za-zА-ЯЁа-яё -]{1,}">
+        <input name="nameProfile" class="popup__input popup__input_name" id="name-input" type="text" value="" required minlength="2" maxlength="40" pattern="[A-Za-zА-ЯЁа-яё -]{1,}">
         <span class="popup__error-message" id="name-input-error"></span>
-        <input name="popup__input_text" class="popup__input popup__input_text" id="text-input" type="text" value="" required minlength="2" maxlength="200">
+        <input name="textProfile" class="popup__input popup__input_text" id="text-input" type="text" value="" required minlength="2" maxlength="200">
         <span class="popup__error-message" id="text-input-error"></span>
         </fieldset>
         <button type="submit" class="popup__button">Сохранить</button>
@@ -56,9 +56,9 @@
         <button type="button" class="popup__close-button popup__close-button_card"></button>
         <h2 class="popup__title">Новое место</h2>
         <fieldset class="popup__inputs">
-          <input name="popup__input_title" class="popup__input popup__input_title" id="title-input" type="text" placeholder="Название" value="" required minlength="1" maxlength="30">
+          <input name="name" class="popup__input popup__input_title" id="title-input" type="text" placeholder="Название" value="" required minlength="1" maxlength="30">
           <span class="popup__error-message" id="title-input-error"></span>
-          <input name="popup__input_link" class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="" required>
+          <input name="link" class="popup__input popup__input_link" id="link-input" type="url" placeholder="Ссылка на картинку" value="" required>
           <span class="popup__error-message" id="link-input-error"></span>
         </fieldset>
         <button type="submit" class="popup__button popup__button_card">Создать</button>
