--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -12,7 +13,10 @@
     </header>
     <main class="content">
       <section class="profile">
+        <div class="profile__image">
         <img class="profile__avatar" src="../src/images/logo-profile.jpg" alt="изображение">
+        <button class="profile__avatar-edit"></button>
+        </div>
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button type="button" class="profile__edit-button"></button>
@@ -32,7 +36,10 @@
       <button class="element__delete" type="button"></button>
       <div class="element__text">
         <h2 class="element__title"></h2>
+        <div class="element__interactivity">
         <button type="button" class="element__like"></button>
+        <span class="element__like-counter"></span>
+        </div>
       </div>
     </div>
   </template>
@@ -70,7 +77,25 @@
         <p class="popup__card-name"></p>
       </div>
     </div>
+    <div class="popup popup_delete_card">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <button type="submit" class="popup__button popup__button_delete">Да</button>
+      </div>
+    </div>
+    <div class="popup popup_avatar">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <fieldset class="popup__inputs">
+        <input class="popup__input" type="url" placeholder="Загрузите изображение">
+        </fieldset>
+        <button type="button" class="popup__button">Сохранить</button>
+      </div>
+    </div> 
     </section>
   </div>
+  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
