--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <main class="content">
       <section class="profile">
         <div class="profile__image">
-        <img class="profile__avatar" src="../src/images/logo-profile.jpg" alt="изображение">
+        <img class="profile__avatar" src="" alt="аватар">
         <button class="profile__avatar-edit"></button>
         </div>
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <h1 class="profile__title"></h1>
           <button type="button" class="profile__edit-button"></button>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button type="button" class="profile__add-button"></button>
       </section>
@@ -54,7 +54,7 @@
         <input name="textProfile" class="popup__input popup__input_text" id="text-input" type="text" value="" required minlength="2" maxlength="200">
         <span class="popup__error-message" id="text-input-error"></span>
         </fieldset>
-        <button type="submit" class="popup__button">Сохранить</button>
+        <button type="submit" class="popup__button popup__button_loading">Сохранить</button>
       </form>
     </div>
     <div class="popup popup_type_card">
@@ -78,21 +78,22 @@
       </div>
     </div>
     <div class="popup popup_delete_card">
-      <div class="popup__container">
+      <form name="delete__card" method="GET" action="#" class="popup__container popup__container_delete">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Вы уверены?</h2>
         <button type="submit" class="popup__button popup__button_delete">Да</button>
-      </div>
+      </form>
     </div>
     <div class="popup popup_avatar">
-      <div class="popup__container">
+      <form name="avatar__form" method="GET" action="#" class="popup__container popup__container_avatar">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Обновить аватар</h2>
         <fieldset class="popup__inputs">
-        <input class="popup__input" type="url" placeholder="Загрузите изображение">
+        <input name="avatar" class="popup__input" id="avatar-link" type="url" placeholder="Загрузите изображение">
+        <span class="popup__error-message" id="avatar-link-error"></span>
         </fieldset>
         <button type="button" class="popup__button">Сохранить</button>
-      </div>
+      </form>
     </div> 
     </section>
   </div>
