--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -14,7 +13,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__image">
-        <img class="profile__avatar" src="" alt="аватар">
+        <img class="profile__avatar" alt="аватар">
         <button class="profile__avatar-edit"></button>
         </div>
         <div class="profile__info">
@@ -54,7 +53,7 @@
         <input name="textProfile" class="popup__input popup__input_text" id="text-input" type="text" value="" required minlength="2" maxlength="200">
         <span class="popup__error-message" id="text-input-error"></span>
         </fieldset>
-        <button type="submit" class="popup__button popup__button_loading">Сохранить</button>
+        <button type="submit" class="popup__button">Сохранить</button>
       </form>
     </div>
     <div class="popup popup_type_card">
@@ -84,19 +83,18 @@
         <button type="submit" class="popup__button popup__button_delete">Да</button>
       </form>
     </div>
-    <div class="popup popup_avatar">
-      <form name="avatar__form" method="GET" action="#" class="popup__container popup__container_avatar">
+    <div class="popup popup_type_avatar">
+      <form name="avatar__form" method="GET" action="#" class="popup__container popup__container_avatar" novalidate>
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Обновить аватар</h2>
         <fieldset class="popup__inputs">
-        <input name="avatar" class="popup__input" id="avatar-link" type="url" placeholder="Загрузите изображение">
+        <input name="avatar" class="popup__input popup__input_avatar" id="avatar-link" type="url" placeholder="Загрузите изображение" value="" required>
         <span class="popup__error-message" id="avatar-link-error"></span>
         </fieldset>
-        <button type="button" class="popup__button">Сохранить</button>
+        <button type="submit" class="popup__button popup__button_avatar">Сохранить</button>
       </form>
     </div> 
     </section>
   </div>
-  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
