--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="popup popup_delete_card">
-      <form name="delete__card" method="GET" action="#" class="popup__container popup__container_delete">
+      <form id="delete" method="POST" action="#" class="popup__container popup__container_delete">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Вы уверены?</h2>
         <button type="submit" class="popup__button popup__button_delete">Да</button>
