--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
       <form id="delete" method="POST" action="#" class="popup__container popup__container_delete">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Вы уверены?</h2>
-        <button type="submit" class="popup__button popup__button_delete">Да</button>
+        <button id="button" type="submit" class="popup__button popup__button_delete">Да</button>
       </form>
     </div>
     <div class="popup popup_type_avatar">
