--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -14,7 +13,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__image">
-        <img class="profile__avatar" alt="аватар">
+        <img class="profile__avatar" src="./images/avatar.png" alt="аватар">
         <button class="profile__avatar-edit"></button>
         </div>
         <div class="profile__info">
@@ -97,6 +96,5 @@
     </div> 
     </section>
   </div>
-  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
